[project]
name = "fbtools"
version = "0.1.0"
description = "A tool for facebook automation for both official and unofficial."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "cachetools>=5.5.2",
    "cachetools-async>=0.0.5",
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "types-aiofiles>=24.1.0.20250606",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]

[tool.basedpyright]
reportUnusedCallResult = false
